// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfrastructureCard should not render hasIPv4 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-11"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Infrastructure
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
              data-ouia-component-id="Type title"
            >
              Type
            </dt>
            <dd
              class=""
              data-ouia-component-id="Type value"
            >
              test-type
            </dd>
            <dt
              class=""
              data-ouia-component-id="Vendor title"
            >
              Vendor
            </dt>
            <dd
              class=""
              data-ouia-component-id="Vendor value"
            >
              test-vendor
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv6 addresses title"
            >
              IPv6 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv6 addresses value"
            >
              <a
                href="http://localhost:5000//ipv6"
              >
                1 address
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="Interfaces/NICs title"
            >
              Interfaces/NICs
            </dt>
            <dd
              class=""
              data-ouia-component-id="Interfaces/NICs value"
            >
              <a
                href="http://localhost:5000//interfaces"
              >
                1 NIC
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`InfrastructureCard should not render hasIPv6 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-12"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Infrastructure
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
              data-ouia-component-id="Type title"
            >
              Type
            </dt>
            <dd
              class=""
              data-ouia-component-id="Type value"
            >
              test-type
            </dd>
            <dt
              class=""
              data-ouia-component-id="Vendor title"
            >
              Vendor
            </dt>
            <dd
              class=""
              data-ouia-component-id="Vendor value"
            >
              test-vendor
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv4 addresses title"
            >
              IPv4 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv4 addresses value"
            >
              <a
                href="http://localhost:5000//ipv4"
              >
                1 address
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="Interfaces/NICs title"
            >
              Interfaces/NICs
            </dt>
            <dd
              class=""
              data-ouia-component-id="Interfaces/NICs value"
            >
              <a
                href="http://localhost:5000//interfaces"
              >
                1 NIC
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`InfrastructureCard should not render hasInterfaces 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-13"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Infrastructure
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
              data-ouia-component-id="Type title"
            >
              Type
            </dt>
            <dd
              class=""
              data-ouia-component-id="Type value"
            >
              test-type
            </dd>
            <dt
              class=""
              data-ouia-component-id="Vendor title"
            >
              Vendor
            </dt>
            <dd
              class=""
              data-ouia-component-id="Vendor value"
            >
              test-vendor
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv4 addresses title"
            >
              IPv4 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv4 addresses value"
            >
              <a
                href="http://localhost:5000//ipv4"
              >
                1 address
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv6 addresses title"
            >
              IPv6 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv6 addresses value"
            >
              <a
                href="http://localhost:5000//ipv6"
              >
                1 address
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`InfrastructureCard should not render hasType 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-9"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Infrastructure
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
              data-ouia-component-id="Vendor title"
            >
              Vendor
            </dt>
            <dd
              class=""
              data-ouia-component-id="Vendor value"
            >
              test-vendor
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv4 addresses title"
            >
              IPv4 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv4 addresses value"
            >
              <a
                href="http://localhost:5000//ipv4"
              >
                1 address
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv6 addresses title"
            >
              IPv6 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv6 addresses value"
            >
              <a
                href="http://localhost:5000//ipv6"
              >
                1 address
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="Interfaces/NICs title"
            >
              Interfaces/NICs
            </dt>
            <dd
              class=""
              data-ouia-component-id="Interfaces/NICs value"
            >
              <a
                href="http://localhost:5000//interfaces"
              >
                1 NIC
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`InfrastructureCard should not render hasVendor 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-10"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Infrastructure
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
              data-ouia-component-id="Type title"
            >
              Type
            </dt>
            <dd
              class=""
              data-ouia-component-id="Type value"
            >
              test-type
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv4 addresses title"
            >
              IPv4 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv4 addresses value"
            >
              <a
                href="http://localhost:5000//ipv4"
              >
                1 address
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv6 addresses title"
            >
              IPv6 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv6 addresses value"
            >
              <a
                href="http://localhost:5000//ipv6"
              >
                1 address
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="Interfaces/NICs title"
            >
              Interfaces/NICs
            </dt>
            <dd
              class=""
              data-ouia-component-id="Interfaces/NICs value"
            >
              <a
                href="http://localhost:5000//interfaces"
              >
                1 NIC
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`InfrastructureCard should render correctly - no data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-1"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Infrastructure
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
              data-ouia-component-id="Type title"
            >
              Type
            </dt>
            <dd
              class=""
              data-ouia-component-id="Type value"
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
              data-ouia-component-id="Vendor title"
            >
              Vendor
            </dt>
            <dd
              class=""
              data-ouia-component-id="Vendor value"
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv4 addresses title"
            >
              IPv4 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv4 addresses value"
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv6 addresses title"
            >
              IPv6 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv6 addresses value"
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
              data-ouia-component-id="Interfaces/NICs title"
            >
              Interfaces/NICs
            </dt>
            <dd
              class=""
              data-ouia-component-id="Interfaces/NICs value"
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`InfrastructureCard should render correctly with data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-2"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Infrastructure
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
              data-ouia-component-id="Type title"
            >
              Type
            </dt>
            <dd
              class=""
              data-ouia-component-id="Type value"
            >
              test-type
            </dd>
            <dt
              class=""
              data-ouia-component-id="Vendor title"
            >
              Vendor
            </dt>
            <dd
              class=""
              data-ouia-component-id="Vendor value"
            >
              test-vendor
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv4 addresses title"
            >
              IPv4 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv4 addresses value"
            >
              <a
                href="http://localhost:5000//ipv4"
              >
                1 address
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv6 addresses title"
            >
              IPv6 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv6 addresses value"
            >
              <a
                href="http://localhost:5000//ipv6"
              >
                1 address
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="Interfaces/NICs title"
            >
              Interfaces/NICs
            </dt>
            <dd
              class=""
              data-ouia-component-id="Interfaces/NICs value"
            >
              <a
                href="http://localhost:5000//interfaces"
              >
                1 NIC
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`InfrastructureCard should render correctly with rhsm facts 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-3"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Infrastructure
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
              data-ouia-component-id="Type title"
            >
              Type
            </dt>
            <dd
              class=""
              data-ouia-component-id="Type value"
            >
              virtual
            </dd>
            <dt
              class=""
              data-ouia-component-id="Vendor title"
            >
              Vendor
            </dt>
            <dd
              class=""
              data-ouia-component-id="Vendor value"
            >
              Not available
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv4 addresses title"
            >
              IPv4 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv4 addresses value"
            >
              Not available
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv6 addresses title"
            >
              IPv6 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv6 addresses value"
            >
              Not available
            </dd>
            <dt
              class=""
              data-ouia-component-id="Interfaces/NICs title"
            >
              Interfaces/NICs
            </dt>
            <dd
              class=""
              data-ouia-component-id="Interfaces/NICs value"
            >
              Not available
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`InfrastructureCard should render enabled/disabled 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-4"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Infrastructure
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
              data-ouia-component-id="Type title"
            >
              Type
            </dt>
            <dd
              class=""
              data-ouia-component-id="Type value"
            >
              test-type
            </dd>
            <dt
              class=""
              data-ouia-component-id="Vendor title"
            >
              Vendor
            </dt>
            <dd
              class=""
              data-ouia-component-id="Vendor value"
            >
              test-vendor
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv4 addresses title"
            >
              IPv4 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv4 addresses value"
            >
              <a
                href="http://localhost:5000//ipv4"
              >
                1 address
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv6 addresses title"
            >
              IPv6 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv6 addresses value"
            >
              <a
                href="http://localhost:5000//ipv6"
              >
                1 address
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="Interfaces/NICs title"
            >
              Interfaces/NICs
            </dt>
            <dd
              class=""
              data-ouia-component-id="Interfaces/NICs value"
            >
              <a
                href="http://localhost:5000//interfaces"
              >
                1 NIC
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`InfrastructureCard should render extra 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="system-properties-card"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-14"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Infrastructure
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
              data-ouia-component-id="Type title"
            >
              Type
            </dt>
            <dd
              class=""
              data-ouia-component-id="Type value"
            >
              test-type
            </dd>
            <dt
              class=""
              data-ouia-component-id="Vendor title"
            >
              Vendor
            </dt>
            <dd
              class=""
              data-ouia-component-id="Vendor value"
            >
              test-vendor
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv4 addresses title"
            >
              IPv4 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv4 addresses value"
            >
              <a
                href="http://localhost:5000//ipv4"
              >
                1 address
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="IPv6 addresses title"
            >
              IPv6 addresses
            </dt>
            <dd
              class=""
              data-ouia-component-id="IPv6 addresses value"
            >
              <a
                href="http://localhost:5000//ipv6"
              >
                1 address
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="Interfaces/NICs title"
            >
              Interfaces/NICs
            </dt>
            <dd
              class=""
              data-ouia-component-id="Interfaces/NICs value"
            >
              <a
                href="http://localhost:5000//interfaces"
              >
                1 NIC
              </a>
            </dd>
            <dt
              class=""
              data-ouia-component-id="something title"
            >
              something
            </dt>
            <dd
              class=""
              data-ouia-component-id="something value"
            >
              test
            </dd>
            <dt
              class=""
              data-ouia-component-id="with click title"
            >
              with click
            </dt>
            <dd
              class=""
              data-ouia-component-id="with click value"
            >
              <a
                href="http://localhost:5000//undefined"
              >
                1 tests
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;
